# backend/docs/swagger.json
@@ -20,7 +20,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.NotaFiscal"
+                                "$ref": "#/definitions/github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.NotaFiscal"
                             }
                         }
                     }
@@ -45,7 +45,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.NotaFiscal"
+                            "$ref": "#/definitions/github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.NotaFiscal"
                         }
                     }
                 ],
@@ -125,7 +125,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Produto"
+                                "$ref": "#/definitions/github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.Produto"
                             }
                         }
                     }
@@ -150,7 +150,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Produto"
+                            "$ref": "#/definitions/github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.Produto"
                         }
                     }
                 ],
@@ -158,7 +158,51 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Produto"
+                            "$ref": "#/definitions/github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.Produto"
+                        }
+                    }
+                }
+            }
+        },
+        "/produtos/{id}/adicionar": {
+            "patch": {
+                "description": "Soma uma quantidade ao saldo atual de um produto específico",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "produtos"
+                ],
+                "summary": "Reposição de estoque",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID do Produto",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Quantidade a adicionar (ex: {",
+                        "name": "quantidade",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -210,7 +254,7 @@
         }
     },
     "definitions": {
-        "models.NotaFiscal": {
+        "github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.NotaFiscal": {
             "type": "object",
             "properties": {
                 "id": {
@@ -219,7 +263,7 @@
                 "itens": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.NotaFiscalItem"
+                        "$ref": "#/definitions/github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.NotaFiscalItem"
                     }
                 },
                 "numero_sequencial": {
@@ -230,7 +274,7 @@
                 }
             }
         },
-        "models.NotaFiscalItem": {
+        "github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.NotaFiscalItem": {
             "type": "object",
             "properties": {
                 "descricao_produto": {
@@ -250,7 +294,7 @@
                 }
             }
         },
-        "models.Produto": {
+        "github_com_dihegomartins_Korp_Teste_DihegoPiresMartins_internal_models.Produto": {
             "type": "object",
             "properties": {
                 "codigo": {
